<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/studentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textColor="@color/darkBlue"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/studentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/matric"
            android:textColor="@color/darkBlue"
            android:textSize="22sp" />

        <Spinner
            android:layout_marginBottom="15dp"
            android:id="@+id/spinner"
            android:layout_width="250dp"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:prompt="@string/spinner_prompt"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/presentBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:padding="15dp"
                android:text="@string/check_in"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/absentBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/logout_button_shape"
                android:padding="15dp"
                android:text="@string/absent"
                android:textColor="@color/colorWhite"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>