<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/studentName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/name"
            android:textCursorDrawable="@drawable/cursor_cyan"
            android:textSize="22sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentId"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/email"
            android:textCursorDrawable="@drawable/cursor_cyan"
            android:textSize="22sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/studentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentName"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/student_id"
            android:textCursorDrawable="@drawable/cursor_cyan"
            android:textSize="22sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailField"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:hint="@string/password"
            android:textCursorDrawable="@drawable/cursor_cyan"
            android:textSize="22sp"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="20"
            app:met_primaryColor="?colorAccent"
            app:met_singleLineEllipsis="true" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:background="@drawable/buttonshape"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="25sp"
            android:textStyle="bold"
            app:met_helperText="Integer" />

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/registerButton"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/already_have_an_account_login" />

    </RelativeLayout>




</ScrollView>